# startup3-algo3

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
alfabeta/: Makefile  main.cpp
alphabeta/: Makefile  main.cpp  tests
common/: Makefile  board.h  game.cpp  game.h  judge.h  judge_proxy.h  minimax.h  player.h  player_alfabeta.h  player_minimax.h  player_minimax_n.h  player_random.h  players.h  possible_move.h
exacta/: .gitignore  Makefile  game.h  main.cpp  player.h
exacta/tests/: 1.test-cmp  1.test-in  defensa_basica.test-cmp  (+1 more)
experimentacion/: Untitled.ipynb  experimentosfitness.sh  fitness_ANCESTORS_population25.txt  fitness_MINIMAX_population25.txt  fitness_RANDOM_population25.txt  fitness_RANDOM_population30.txt  geneWeights_MIXED_population100.txt  laboratorio.ipynb  moves_function1.txt  moves_function2.txt  result  sensei.txt  sensei_ANCESTORS_population25.txt  sensei_MINIMAX_population25.txt  sensei_RANDOM_population25.txt  sensei_RANDOM_population30.txt
genetico/: .genome.h.swp  .gitignore  Makefile  board.h  experimentarFitness  gene.h  genome.h  genome.h~  gridSensei_2.cpp  gridSensei_3.cpp  gridSensei_4.cpp  gridSensei_5.cpp  main.cpp  main_minimax_n.cpp  main_temp.cpp  main_test.cpp  mating_pool.h  matingpool.h  minimax3.h  minimaxN  parametrizado.sh  player_genetic.h
gridsearch/: Makefile  gridSensei_3.txt  gridsensei2.txt  main.cpp
juez/: .gitignore  GraphicalBoard.py  Makefile  PlayerController.py  RandomPlayer_test.py  Referee.py  c_linea.py
minimax/: .gitignore  Makefile  limited  limited.cpp  main.cpp  main_minimax_n.cpp
(+6 files in other folders)
